# Trading-Tools

./: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  SOUL_VN.md  UI_EVALUATION_ROADMAP.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  railway.json  ruff.toml
.github/workflows/: ci.yml  reliability-weekly.yml
docs/: USER_MANUAL.md
docs/blueprints/: 01_System_Architecture_Overview.md  02_Backend_Engineering.md  03_Frontend_Architecture.md  04_Multi_Agent_System.md  05_Integration_Security.md  06_Development_Standards_Rules.md  bc1.md
docs/plans/: AI_RELIABILITY_EVAL_PACK.md  CVF_WORKSPACE_MIGRATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  LOCAL_API_CONTRACTS.md  LOCAL_EMERGENCY_DRILL_RUNBOOK.md  LOCAL_ONBOARDING_BENCHMARK.md  LOCAL_OPERATOR_RUNBOOK.md  LOCAL_PERSONAL_TRADING_ROADMAP.md  LOCAL_REAL_API_UAT_CHECKLIST.md  LOCAL_RELEASE_CHECKLIST.md  LOCAL_SMOKE_CHECKLIST.md  LOCAL_UI_BASELINE_SNAPSHOTS.md  LOCAL_UPGRADE_ROLLBACK_GUIDE.md  MARKET_BOARD_MOBILE_FIX_ROADMAP.md
docs/reports/: AI_RELIABILITY_WEEKLY_LATEST.md  CVF_CHANGE_TRACE_LOG.md  LOCAL_RELEASE_VALIDATION_LATEST.md  LOCAL_TEST_COVERAGE_LATEST.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  TEST_COVERAGE_BADGES.md  (+4 more)
frontend/: package.json  pnpm-lock.yaml  railway.json
scripts/: benchmark-onboarding.ps1  ci.ps1  data-cache-backup.ps1  data-cache-restore.ps1  emergency-fallback-drill.ps1  generate_coverage_report.py  local-run.ps1  phase-gates.ps1  pre-live-api-gate.ps1  quantize_model.py  release-validation.ps1  run-weekly-reliability-pack.ps1
tests/: conftest.py
(+112 files in other folders)
